# np_training

./: pyproject.toml
src/: np_training.ipynb
