[tool.poetry]
name = "np-training"
version = "0.1.0"
description = ""
authors = ["Oveys Safarnejad <safarnejad@outlook.com>"]
readme = "README.md"
packages = [{include = "np_training"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
jupyterlab = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
